fix guess cutoff

--- a/public/styles.css
+++ b/public/styles.css
@@ -78,6 +78,8 @@ settings-content > * {
     gap: 25px;
     position: relative;
     padding-top: 8px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 #guesses:not(:empty)::before {
